# ferrox

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
api-hash-macro/: Cargo.toml
api-hash-macro/src/: lib.rs
dll_encryptor/: defender_killer.enc
scripts/: build.py  gen_cargo_config.py  polymorph.py  protectscan.py  sigdetect.py  sign.py
src/: Cargo.toml  api_hash.rs  api_resolve.rs  cleanup.rs  detection.rs  dissolve.rs  fingerprint.rs  lib.rs  main.rs  ntbridge.rs  ntcall.rs  padding.rs  polymorph.rs  recon.rs  sprotect.rs  stealth.rs  system_health.rs  win_internals.rs
src/app/: app_wallets.rs  extraction.rs  gaming.rs  messaging.rs  mod.rs
src/communications/: blob_format.rs  mod.rs  telegram.rs
src/docs/: crypto_keys.rs  extraction.rs  file_types.rs  mod.rs  system_docs.rs  user_docs.rs
src/fun/: mod.rs
src/fun/games/: gbattlenet.rs  gdiscord.rs  gepic.rs  gminecraft.rs  gnationsglory.rs  goriginea.rs  griot.rs  groblox.rs  gsteam.rs  guplay.rs  mod.rs
src/proc/: mod.rs
src/proc/browser/: bbrowser.rs  bloader.rs  bmain.rs  bpipe.rs  cbrowser.rs  ebrowser.rs  mod.rs
src/proc/lbrowser/: lextract.rs  lmain.rs  mod.rs
src/proc/system/: mod.rs  resources.rs  specs.rs
src/wallet/: browser_extensions.rs  desktop_apps.rs  extraction.rs  mod.rs
